Fix bottom text being cutoff

--- a/src/app/unreviewed/unreviewed.component.sass
+++ b/src/app/unreviewed/unreviewed.component.sass
@@ -2,5 +2,5 @@ table
     width: 100%
 
 .table-container
-    height: 800px
+    height: 100%
     overflow-y: auto
